# agent_orchestrator

./: .gitignore  README.md  build.sh  main.py  pyproject.toml  render.yaml
client/: .env  (+2 more)
server/: .gitignore  README.md  agents.py  build.sh  main.py  orchestration.py  pyproject.toml  render.yaml  run_debug.py  server.py  tools.py  tracing.py
server/ai/: __init__.py  agent.py  agent_context.py  agent_manager.py  agent_manager_interface.py  agent_manager_store.py  agents.py  models.py  orchestration.py  schemas.py  tracer.py  tracing.py
server/ai/agent/: __init__.py  agent_factory.py  agent_interface.py  agent_templates.py  router.py  runtime_agent.py  schemas.py  seed_agent_templates.py  tables.py
server/ai/agent_manager/: __init__.py  agent_context.py  agent_manager_interface.py  agent_manager_store.py  errors.py  runtime_agent_manager.py
server/ai/tools/: __init__.py  code_runner.py  control_flow.py  generic_tools.py  image_generator.py  web_searching.py
server/auth/: __init__.py  auth.py  models.py  router.py  schemas.py  services.py  tables.py
server/chat/: __init__.py  agent_factory_for_chat.py  chat.py  models.py  router.py  schemas.py  services.py  tables.py
server/database/: __init__.py  database.py
server/db/: models.py  placeholder_db.py  schemas.py
server/docs/: .gitignore  build_docs.bat  conf.py  index.rst
server/tools/: code_runner.py  control_flow.py  generic_tools.py  image_generator.py  web_searching.py
server/user_settings/: __init__.py  models.py  router.py  schemas.py  tables.py  user_settings.py
server/utils/: utils.py
(+78 files in other folders)
