[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.13",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.3",
]
